# BeatBangerAuto-Rework

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  config.json  main.cpp  memoryscanner.cpp  memoryscanner.h  resources.qrc  versions.json
qml/: Main.qml
resources/: appicon.rc
src/: main.cpp
src/core/: appcontroller.cpp  appcontroller.h  memoryscanner.cpp  memoryscanner.h  patternmatcher.cpp  patternmatcher.h
src/platform/windows/: processmanager.cpp  processmanager.h
src/utils/: configmanager.cpp  configmanager.h  constants.h  updatemanager.cpp  updatemanager.h
